changing node name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "client",
+  "name": "meanUploader_client",
   "private": true,
+  "description": "The client half of an unstable testing ground for uploading files in the M.E.A.N stack, built using yeoman. ",
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
