--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "bootstrap": "^3.2.0",
     "restangular": "^1.6.1",
     "ng-file-upload-shim": "^12.2.13",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "angular-socket-io": "^0.7.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
